# AdvancedMachineLearning

./: .gitignore  action-net_emg.py  aggregation.py  colab_runner.ipynb  merge_readings.py  pyproject.toml  save_feat.py  tester.py  train_classifier.py  train_classifier2.py  train_classifier_fusion.py  train_notebook.ipynb
action-net/: ActionNet_test.txt  ActionNet_train.txt  C01_timestamps.txt  C02_timestamps.txt  C03_timestamps.txt  C04_timestamps.txt  C05_timestamps.txt  frame_generation.txt  visualize_spec.ipynb
configs/: I3D_save_feat.yaml  I3D_save_feat_an.yaml  LSTM_action_net.yaml  default.yaml  default_an.yaml  emg.yaml  emg_conv.yaml  fusion.yaml  fusion_conv.yaml  test.yaml
models/: FinalClassifier.py  __init__.py
models"/D1/Feb16_12-02-05/: action-classifier_EMG_3.pth  action-classifier_EMG_4.pth
models"/D1/Feb16_12-02-59/: action-classifier_EMG_1.pth  action-classifier_EMG_2.pth
tasks/: Task.py
train_val/: D1_test.txt  D1_test_len.txt  D1_train.txt  D4_test.pkl  D4_train.pkl  check_len_records.py
train_val_action_net/: D1_test.pkl  D1_train.pkl  D4_test.pkl  D4_train.pkl  feature_extracted_D4_test.pkl  feature_extracted_D4_train.pkl
train_val_an/: D1_train.pkl  S04_1.txt
utils/: action_record.py  dataset_creator.py  extract_hdf5.py  extract_pkl.py  loaders.py  merge_readings.py  rgb_dataset.py  rgb_dataset_five_cameras.py  spec_emg.py  temporal_aggregation.py  utils.py
